fix: 修复后端代码格式和配置更新
- 更新 OrderApplicationService 添加订单详情查询
- 更新 OrderController 返回 OrderDetailVO
- 更新 PaymentController 使用 @RequestBody
- 更新各控制器的权限校验和异常处理
- 更新配置文件

Co-Authored-By: Claude <noreply@anthropic.com>